created database and added signup page php

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <use xlink:href="images\sprite.svg#menu"></use>
       </svg>
       <ul class="list nav__list collapsible__content">
-        <li class="nav__item"><a href="#">Shops</a></li>
-        <li class="nav__item"><a href="#">Discover</a></li>
+        <li class="nav__item"><a href="shop.html">Shops</a></li>
+        <li class="nav__item"><a href="index.html">Discover</a></li>
         <li class="nav__item"><a href="#">Favourite</a></li>
       </ul>
     </nav>
@@ -62,7 +62,7 @@
             find clothes , beauty products and home style by local
             entrepreneurs.
           </p>
-          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+          <a href="SignUpPage.php" class="btn btn--accent btn--stretched">Get Started</a>
         </header>
         <img class="hero__image" src="images/hero.png" alt="hero picture" />
         <img class="hero__image" src="images/hero2.png" alt="hero picture" />
@@ -86,12 +86,12 @@
           Search
         </button>
       </div>
-      <h3>Brands</h3>
+      <h2 class="brand--heading">Brands</h2>
       <div class="brand-item__row ">
         <div class="brand-item">
           <a class="brand-item__content" href="/brand/zara">
            <img src="https://lh3.googleusercontent.com/7IHkfk6PFQx5fVyI7aDZKrT8BteYnO6HTjJO7V0te7gB1RzY0uEzBbRwRQSatziT8cIbOemeku1obE9pUcwsSTLQZuAo75_SGfAP=s150" alt="Zara">
-          <span class="brand-item__name">zara</span>
+          <span class="brand-item__name">Zara</span>
           </a>
       </div>
       <div class="brand-item">
@@ -154,7 +154,7 @@
 </div>
 <div class="brand-item"><a class="brand-item__content" href="/brand/forever-new">
   <img src="https://images.yaga.co.za/_brands/brand-45a01058ac0343258a7a8fdcd8b077ae.jpeg?s=150&amp;f=png&amp;c=inside" alt="Forever New">
-  <span class="brand-item__name">Forever New</span></a>
+  <span class="brand-item__name">ForeverNew</span></a>
 </div>
 <div class="brand-item"><a class="brand-item__content" href="/brand/mr-price">
   <img src="https://images.yaga.co.za/_brands/brand-bd361757635d50e7593ebe44b0903ba2.png?s=150&amp;f=png&amp;c=inside" alt="Mr Price">
@@ -173,7 +173,215 @@
   <span class="brand-item__name">Country Road</span></a>
 </div>
 </div>
+<!--categories section-->
+<section class="categories-section">
+  <h2>Categories</h2>
+  <div class="categories-grid">
+    <div class="block-image">
+      <div class="image-container dark">
+        <img src="images/catewomen.jpg" alt="women" class="src-image" />
+        <div class="text-over">WOMEN</div>
+      </div>
+    </div>
+    <div class="block-image">
+      <div class="image-container dark">
+        <img src="images/catemen.jpg" alt="men" class="src-image" />
+        <div class="text-over">MEN</div>
+      </div>
+    </div>
+    <div class="block-image">
+      <div class="image-container dark">
+        <img src="images/catebeauty.jpg" alt="BEAUTY" class="src-image" />
+        <div class="text-over">BEAUTY</div>
+      </div>
+    </div>
+    <div class="block-image">
+      <div class="image-container dark">
+        <img src="images/catehome.jpg" alt="Home" class="src-image" />
+        <div class="text-over">HOME</div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--secure payment section-->
+<section class="hp_payments_shipping">
+  <div class="hp_payments_shipping-grid">
+    <!-- Safe Selling -->
+    <div class="hp_payments_shipping-item">
+      <div class="hp_payments_shipping-paymentsguarantee">
+        <svg class="icon">
+          <use xlink:href="images/sprite2.svg#Group (1)"></use>
+        </svg>
+        <p class="hp_payments_shipping-subtext">
+          Safe selling & buying<br>
+         <a href="#" class="link-arrow">Learn More</a>
+        </p>
+      </div>
+    </div>
+
+    <div class="hp_payments_shipping-divider"></div>
+
+    <!-- Secure Payments -->
+    <div class="hp_payments_shipping-item hp_payments_shipping-item--payments">
+      <p class="hp_payments_shipping-subtext">Secure payments by</p>
+      <div class="payments_shipping-logos">
+        <svg class="icon">
+          <use xlink:href="images/sprite2.svg#formkit_visa (1)"></use>
+        </svg>
+        <svg class="icon">
+          <use xlink:href="images/sprite2.svg#logos_mastercard (1)"></use>
+        </svg>
+        <svg class="icon">
+          <use xlink:href="images/sprite2.svg#hugeicons_paypal (1)"></use>
+        </svg>
+      </div>
+    </div>
+
+    <div class="hp_payments_shipping-divider"></div>
+
+    <!-- Fast Delivery -->
+    <div class="hp_payments_shipping-item hp_payments_shipping-item--shipping">
+      <p class="hp_payments_shipping-subtext">Fast and convenient delivery by</p>
+      <div class="payments_shipping-delivery">
+        <svg class="icon">
+          <use xlink:href="images/sprite2.svg#iconoir_delivery-truck (1)"></use>
+        </svg>
+        <ul class="delivery-services">
+          <li>Paxi</li>
+          <li>PostNet</li>
+          <li>Aramex</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--testimonial section -->
+<section class="block testimonial-section">
+  <header class="block__header">
+    <h2 class="section-title " >What Our Customers Are Saying</h2>
+    <p class="section-subtitle"> At GlamConnect, we empower small business owners, creators, and everyday dreamers to launch and grow their brands. With zero selling fees and a supportive community of buyers, GlamConnect is the platform where passion meets profit.</p>
+  </header>
+  <div class="container">
+    <div class="card testimonial">
+      <div class="grid grid--1x2">
+        <div class="testimonial__image">
+          <img src="images/testimonial2.jpg" alt="Smiling GlamConnect Seller" />
+          <span class="icon-container icon-container--accent">
+            <svg class="icon icon--white icon--small">
+              <use xlink:href="images/sprite.svg#quotes"></use>
+            </svg>
+          </span>
+        </div>
+        <blockquote class="quote">
+          <p class="quote__text">
+            “Thanks to GlamConnect, I’ve grown my brand without paying a cent in seller fees.
+             I reached thousands of customers and turned my side hustle into a real business.”
+          </p>
+          <p class="quote__text">
+            “If you're thinking about joining—do it. Whether you're selling handmade clothes, makeup, or home designs, GlamConnect gives you a voice, a platform, and a family of shoppers who care about local talent. It's more than just a marketplace—it's a movement.”
+          </p>
+          <footer>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary quote__line">
+                  <use xlink:href="images/sprite.svg#line"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title quote__author">Lerato Mokoena</h3>
+                <p class="quote__organization">Owner of LeraGlow Beauty</p>
+              </div>
+            </div>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer class="block block--dark footer">
+  <div class="container grid footer__sections">
+
+    <!-- Shop Section -->
+    <section class="collapsible collapsible--expanded footer__section">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading footer__heading">Shop</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li><a href="#">Clothing</a></li>
+          <li><a href="#">Makeup</a></li>
+          <li><a href="#">Home Decor</a></li>
+        </ul>
+      </div>
     </section>
+
+    <!-- About Section -->
+    <section class="collapsible footer__section">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading footer__heading">About GlamConnect</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">Our Mission</a></li>
+          <li><a href="#">For Sellers</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Support Section -->
+    <section class="collapsible footer__section">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading footer__heading">Support</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li><a href="./ContactUs.html">Contact Us</a></li>
+          <li><a href="./Faqs.html">FAQs</a></li>
+          <li><a href="./shipping-returns.html">Shipping & Returns</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Community Section -->
+    <section class="collapsible footer__section">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading footer__heading">Community</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li><a href="#">Become a Seller</a></li>
+          <li><a href="#">Follow on Instagram</a></li>
+          <li><a href="#">Join Our Newsletter</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Brand Section -->
+    <section class="footer__brand">
+      <img src="images/glamlogo.svg" alt="GlamConnect Logo" />
+      <p class="footer__copyright">
+        &copy; 2025 GlamConnect. Built with love in South Africa.
+      </p>
+    </section>
+
+  </div>
+</footer>
+
     <script src="js/main.js"></script>
   </body>
 </html>
