created database , sign up and login pages ,changed files from .html to .php , made the add shop code more re-useable, created checkout , cart ,creator admin files , added admin dashboard, created profile ,log out , search shop , seller orders page, uploaded images for products to database , created products, order , order items , user , admin tables in database , connected my code to database with config.php
finalised building a functional and user friendly website

--- a/Faqs.html
+++ b/Faqs.html
@@ -97,10 +97,19 @@
             <div class="accordion-body">
               <p class="faq-question">glamconnect?</p>
               <p class="faq-answer">
-                GlamConnect is a South African C2C e-commerce platform that
-                connects sellers and buyers of clothes, makeup, and home
-                designs.everyone can list their items and start selling for free
-                ;or shop for second hands finds safely and conveniently.
+                GlamConnect is a South-African C2C e-commerce platform that
+                allows users to buy and sell fashion and beauty products,
+                including clothes, makeup, and home designs. It is designed to
+                be user-friendly and accessible to everyone, making it easy for
+                individuals to start their own online shops and sell their
+                products. The platform provides a secure and convenient way for
+                users to connect with each other, allowing them to buy and sell
+                new or second-hand items. GlamConnect aims to create a vibrant
+                community of fashion and beauty enthusiasts, where users can
+                discover unique products and connect with like-minded
+                individuals. Whether you're looking to declutter your closet,
+                find a new outfit, or shop for second-hand finds, GlamConnect
+                provides a platform for you to do so safely.
               </p>
             </div>
           </div>
@@ -128,10 +137,9 @@
             <div class="accordion-body">
               <p class="faq-question">To sell an item on GlamConnect:</p>
               <p class="faq-answer">
-                Simply create an account, go to your dashboard, and click on
-                "List a Product". Fill in the product details and upload photos.
-                Once the listing is complete, your product will be available for
-                buyers to browse and purchase.
+                Simply create an account, go to Addshop, and fill in the product
+                details and upload photos. Once the listing is complete, your
+                product will be available for buyers to browse and purchase.
               </p>
             </div>
           </div>
@@ -157,12 +165,14 @@
             data-bs-parent="#faqAccordion"
           >
             <div class="accordion-body">
-              <p class="faq-question">Yes, GlamConnect is free to use.</p>
               <p class="faq-answer">
-                You can create an account, list products, and browse the
-                platform without any charges.This means once the order is
-                complete, you will receive 100% of the asking price to your
-                Glamconnect Wallet.
+                yes GlamConnect is free to use for buyers and sellers but There
+                is a 15% commissions fee per order from sellers. This means that
+                if you sell an item for R100, you will receive R85 in your
+                GlamConnect Wallet. This fee is deducted from the total sale.
+                GlamConnect does not charge any listing fees or monthly
+                subscription fees. You can create an account, list products and
+                start selling without any upfront costs.
               </p>
             </div>
           </div>
@@ -200,7 +210,7 @@
       </div>
     </div>
     <div class="mt-3 text-center">
-      <a href="index.html">Back to Home</a>
+      <a href="index.php">Back to Home</a>
     </div>
 
     <!-- Bootstrap JS Bundle -->
