--- a/ContactUs.html
+++ b/ContactUs.html
@@ -132,7 +132,7 @@
       </div>
     </div>
     <div class="mt-3 text-center">
-      <a href="index.html">Back to Home</a>
+      <a href="index.php">Back to Home</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
